<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="es.studium.filmingapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <!-- NAVEGACIÓN DE PELÍCULAS -->
    <fragment
        android:id="@+id/nav_movies"
        android:name="es.studium.filmingapp.ui.movies.MovieFragment"
        android:label="@string/menu_movies"
        tools:layout="@layout/fragment_movies">

        <action
            android:id="@+id/action_movieFragment_to_movieDetailsFragment"
            app:destination="@id/detallesPeliculas" />
    </fragment>

    <fragment
        android:id="@+id/detallesPeliculas"
        android:name="es.studium.filmingapp.ui.movies.MovieDetailsFragment"
        android:label="@string/batman"
        tools:layout="@layout/fragment_movie_details" >

        <action
            android:id="@+id/action_movieDetailsFragment_to_moviePosterFragment"
            app:destination="@id/poster" />
    </fragment>

    <fragment
        android:id="@+id/poster"
        android:name="es.studium.filmingapp.ui.movies.MoviePosterFragment"
        android:label="@string/batman"
        tools:layout="@layout/fragment_movie_poster" >

        <action
            android:id="@+id/action_moviePosterFragment_to_movieDetailsFragment"
            app:destination="@id/detallesPeliculas" />
    </fragment>

    <!-- NAVEGACIÓN DE SERIES -->
    <fragment
        android:id="@+id/nav_series"
        android:name="es.studium.filmingapp.ui.series.SeriesFragment"
        android:label="@string/menu_series"
        tools:layout="@layout/fragment_series">

        <action
            android:id="@+id/action_seriesFragment_to_seriesDetailsFragment"
            app:destination="@id/detallesSeries" />
    </fragment>

    <fragment
        android:id="@+id/detallesSeries"
        android:name="es.studium.filmingapp.ui.series.SeriesDetailsFragment"
        android:label="@string/penguin"
        tools:layout="@layout/fragment_series_details" >

        <action
            android:id="@+id/action_seriesDetailsFragment_to_seriesPosterFragment"
            app:destination="@id/posterSerie" />
    </fragment>

    <fragment
        android:id="@+id/posterSerie"
        android:name="es.studium.filmingapp.ui.series.SeriesPosterFragment"
        android:label="@string/penguin"
        tools:layout="@layout/fragment_series_poster" >

        <action
            android:id="@+id/action_seriesPosterFragment_to_seriesDetailsFragment"
            app:destination="@id/detallesSeries" />
    </fragment>

</navigation>